コード整理やフォルダ分け

--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -44,77 +44,79 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APIResource.cs" />
-    <Compile Include="Characteristic.cs" />
-    <Compile Include="CommonModels\APIResourceData.cs" />
-    <Compile Include="CommonModels\DescriptionData.cs" />
-    <Compile Include="CommonModels\FlavorText.cs" />
-    <Compile Include="CommonModels\GenerationGameIndexData.cs" />
-    <Compile Include="EggGroup.cs" />
-    <Compile Include="EggGroupList.cs" />
-    <Compile Include="Games\GenerationData.cs" />
-    <Compile Include="Gender.cs" />
-    <Compile Include="GenderList.cs" />
-    <Compile Include="Generation.cs" />
-    <Compile Include="GenerationList.cs" />
-    <Compile Include="GrowthRate.cs" />
-    <Compile Include="GrowthRateList.cs" />
-    <Compile Include="ItemAttributeList.cs" />
-    <Compile Include="ItemCategoryList.cs" />
-    <Compile Include="ItemList.cs" />
-    <Compile Include="Language.cs" />
-    <Compile Include="LanguageList.cs" />
-    <Compile Include="LocationAreaList.cs" />
-    <Compile Include="LocationList.cs" />
-    <Compile Include="Locations\RegionData.cs" />
-    <Compile Include="NamedAPIResourceList.cs" />
-    <Compile Include="Nature.cs" />
-    <Compile Include="NatureList.cs" />
-    <Compile Include="PalParkAreaList.cs" />
+    <Compile Include="Abstracts\APIResourceItemsBase.cs" />
+    <Compile Include="Abstracts\APIResourceList.cs" />
+    <Compile Include="Abstracts\APIResourceListBase.cs" />
+    <Compile Include="Abstracts\APIResource.cs" />
+    <Compile Include="Pokemon\Characteristics\Characteristic.cs" />
+    <Compile Include="Utility\CommonModels\APIResourceData.cs" />
+    <Compile Include="Utility\CommonModels\DescriptionData.cs" />
+    <Compile Include="Utility\CommonModels\FlavorText.cs" />
+    <Compile Include="Utility\CommonModels\GenerationGameIndexData.cs" />
+    <Compile Include="Pokemon\EggGroups\EggGroup.cs" />
+    <Compile Include="Pokemon\EggGroups\EggGroupList.cs" />
+    <Compile Include="Games\Generations\GenerationData.cs" />
+    <Compile Include="Pokemon\Genders\Gender.cs" />
+    <Compile Include="Pokemon\Genders\GenderList.cs" />
+    <Compile Include="Games\Generations\Generation.cs" />
+    <Compile Include="Games\Generations\GenerationList.cs" />
+    <Compile Include="Pokemon\GrowthRates\GrowthRate.cs" />
+    <Compile Include="Pokemon\GrowthRates\GrowthRateList.cs" />
+    <Compile Include="Items\ItemAttributes\ItemAttributeList.cs" />
+    <Compile Include="Items\ItemCategories\ItemCategoryList.cs" />
+    <Compile Include="Items\Item\ItemList.cs" />
+    <Compile Include="Utility\Languages\Language.cs" />
+    <Compile Include="Utility\Languages\LanguageList.cs" />
+    <Compile Include="Locations\LocationAreas\LocationAreaList.cs" />
+    <Compile Include="Locations\Locations\LocationList.cs" />
+    <Compile Include="Locations\Regions\RegionData.cs" />
+    <Compile Include="Abstracts\NamedAPIResourceList.cs" />
+    <Compile Include="Pokemon\Natures\Nature.cs" />
+    <Compile Include="Pokemon\Natures\NatureList.cs" />
+    <Compile Include="Locations\PalParkAreas\PalParkAreaList.cs" />
     <Compile Include="PokeAPI.cs" />
     <Compile Include="PokeAPIClient.cs" />
-    <Compile Include="Pokedex.cs" />
-    <Compile Include="PokedexList.cs" />
-    <Compile Include="PokemonList.cs" />
-    <Compile Include="PokemonSpecies.cs" />
-    <Compile Include="PokemonSpeciesList.cs" />
-    <Compile Include="Pokemon\PokemonSpeciesData.cs" />
-    <Compile Include="Pokemon\CharacteristicsData.cs" />
-    <Compile Include="Pokemon\EggGroupData.cs" />
-    <Compile Include="Pokemon\GenderData.cs" />
-    <Compile Include="Pokemon\GenusData.cs" />
-    <Compile Include="Pokemon\GrowthRateData.cs" />
-    <Compile Include="Pokemon\GrowthRateExperienceLevelData.cs" />
-    <Compile Include="Pokemon\MoveBattleStylePreferenceData.cs" />
-    <Compile Include="Pokemon\NatureData.cs" />
-    <Compile Include="Pokemon\NatureStatChangeData.cs" />
-    <Compile Include="Pokemon\PalParkEncounterAreaData.cs" />
-    <Compile Include="Pokemon\PokemonSpeciesDexEntryData.cs" />
-    <Compile Include="Pokemon\PokemonSpeciesGenderData.cs" />
-    <Compile Include="Pokemon\PokemonSpeciesVariety.cs" />
-    <Compile Include="Pokemon\TypeData.cs" />
-    <Compile Include="Pokemon\TypePokemonData.cs" />
-    <Compile Include="Pokemon\TypeRelationsData.cs" />
-    <Compile Include="Region.cs" />
-    <Compile Include="RegionList.cs" />
-    <Compile Include="NamedAPIResourceListItem.cs" />
-    <Compile Include="ResourceLists\APIResourceListData.cs" />
-    <Compile Include="Type.cs" />
-    <Compile Include="TypeList.cs" />
-    <Compile Include="Utility\LanguageData.cs" />
-    <Compile Include="ResourceLists\NamedAPIResourceListData.cs" />
-    <Compile Include="CommonModels\NameData.cs" />
-    <Compile Include="CommonModels\NamedAPIResourceData.cs" />
-    <Compile Include="PokeAPIBase.cs" />
-    <Compile Include="Games\PokedexData.cs" />
-    <Compile Include="Games\PokemonEntryData.cs" />
+    <Compile Include="Games\Pokedexes\Pokedex.cs" />
+    <Compile Include="Games\Pokedexes\PokedexList.cs" />
+    <Compile Include="Pokemon\Pokemon\PokemonList.cs" />
+    <Compile Include="Pokemon\PokemonSpecies\PokemonSpecies.cs" />
+    <Compile Include="Pokemon\PokemonSpecies\PokemonSpeciesList.cs" />
+    <Compile Include="Pokemon\PokemonSpecies\PokemonSpeciesData.cs" />
+    <Compile Include="Pokemon\Characteristics\CharacteristicsData.cs" />
+    <Compile Include="Pokemon\EggGroups\EggGroupData.cs" />
+    <Compile Include="Pokemon\Genders\GenderData.cs" />
+    <Compile Include="Pokemon\PokemonSpecies\GenusData.cs" />
+    <Compile Include="Pokemon\GrowthRates\GrowthRateData.cs" />
+    <Compile Include="Pokemon\GrowthRates\GrowthRateExperienceLevelData.cs" />
+    <Compile Include="Pokemon\Natures\MoveBattleStylePreferenceData.cs" />
+    <Compile Include="Pokemon\Natures\NatureData.cs" />
+    <Compile Include="Pokemon\Natures\NatureStatChangeData.cs" />
+    <Compile Include="Pokemon\PokemonSpecies\PalParkEncounterAreaData.cs" />
+    <Compile Include="Pokemon\PokemonSpecies\PokemonSpeciesDexEntryData.cs" />
+    <Compile Include="Pokemon\Genders\PokemonSpeciesGenderData.cs" />
+    <Compile Include="Pokemon\PokemonSpecies\PokemonSpeciesVariety.cs" />
+    <Compile Include="Pokemon\Types\Type\TypeData.cs" />
+    <Compile Include="Pokemon\Types\Type\TypePokemonData.cs" />
+    <Compile Include="Pokemon\Types\Type\TypeRelationsData.cs" />
+    <Compile Include="Locations\Regions\Region.cs" />
+    <Compile Include="Locations\Regions\RegionList.cs" />
+    <Compile Include="Abstracts\PokeAPIBase.cs" />
+    <Compile Include="ResourceLists\APIResourceListItems.cs" />
+    <Compile Include="Pokemon\Types\Type\Type.cs" />
+    <Compile Include="Pokemon\Types\Type\TypeList.cs" />
+    <Compile Include="Utility\Languages\LanguageData.cs" />
+    <Compile Include="ResourceLists\NameAPIResourceItems.cs" />
+    <Compile Include="Utility\CommonModels\NameData.cs" />
+    <Compile Include="Utility\CommonModels\NamedAPIResourceData.cs" />
+    <Compile Include="Games\Pokedexes\PokedexData.cs" />
+    <Compile Include="Games\Pokedexes\PokemonEntryData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Games\VersionData.cs" />
-    <Compile Include="Games\VersionGroupData.cs" />
-    <Compile Include="Version.cs" />
-    <Compile Include="VersionGroup.cs" />
-    <Compile Include="VersionGroupList.cs" />
-    <Compile Include="VersionList.cs" />
+    <Compile Include="Games\Version\VersionData.cs" />
+    <Compile Include="Games\VersionGroups\VersionGroupData.cs" />
+    <Compile Include="Games\Version\Version.cs" />
+    <Compile Include="Games\VersionGroups\VersionGroup.cs" />
+    <Compile Include="Games\VersionGroups\VersionGroupList.cs" />
+    <Compile Include="Games\Version\VersionList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Generic\Generic.csproj">
@@ -125,8 +127,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Items\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
