--- a/PokeAPITool/PokeAPITool.csproj
+++ b/PokeAPITool/PokeAPITool.csproj
@@ -52,6 +52,12 @@
     <Compile Include="DetailForm.Designer.cs">
       <DependentUpon>DetailForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="APIResourceListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="APIResourceListForm.Designer.cs">
+      <DependentUpon>APIResourceListForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GenerationDetailForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
     <Compile Include="VersionGroupDetailForm.Designer.cs">
       <DependentUpon>VersionGroupDetailForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="APIResourceListForm.resx">
+      <DependentUpon>APIResourceListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DetailForm.resx">
       <DependentUpon>DetailForm.cs</DependentUpon>
     </EmbeddedResource>
